Fix auth page alignments

--- a/src/app/pages/account/auth.scss
+++ b/src/app/pages/account/auth.scss
@@ -5,7 +5,7 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	padding: 0 $size0;
+	padding: 0 $size0 $size3;
 	max-width: 400px;
 	margin: auto;
 
